--- a/css/koalaeditor.css
+++ b/css/koalaeditor.css
@@ -54,6 +54,8 @@
   background: none;
   cursor: pointer;
   transition: all .3s;
+  border-radius: 0;
+  margin: 0;
   color: #333333;
 }
 .ke-toolbar .ke-toolbar-button:hover {
