--- a/css/koalaeditor.less
+++ b/css/koalaeditor.less
@@ -62,6 +62,8 @@
     background: none;
     cursor: pointer;
     transition: all .3s;
+    border-radius: 0;
+    margin: 0;
     color: @toolbar-button-color;
     &:hover{
       background: @color;
