--- a/css/koalaeditor.less
+++ b/css/koalaeditor.less
@@ -101,6 +101,7 @@
       padding: 0.6em;
       transition: all .5s;
       white-space: nowrap;
+      color: black;
       &:hover{
         background: @color;
         color: white;
