--- a/css/koalaeditor.css
+++ b/css/koalaeditor.css
@@ -11,36 +11,17 @@
   outline: none;
 }
 .ke-editor .editing-image {
-  outline: solid 1px #77a2ad;
+  outline: dashed 1px #77a2ad;
   display: inline-block;
   position: relative;
 }
-.ke-editor .editing-image .ke-img-btn-toolbar {
+.ke-editor .editing-image .ke-img-handler {
   position: absolute;
-  bottom: 1em;
-  right: 1em;
-}
-.ke-editor .editing-image .ke-img-btn-toolbar button {
+  bottom: -2px;
+  right: -2px;
+  width: 10px;
+  height: 10px;
   background: #77a2ad;
-  color: white;
-  font-size: 16px;
-  font-family: Lato, Arial, Helvetica, sans-serif;
-  border-radius: 0em;
-  border: none;
-  margin: 0;
-  padding: 0.5em;
-  cursor: pointer;
-}
-.ke-editor .editing-image .ke-img-btn-toolbar button.delete {
-  background: #B20000;
-}
-.ke-editor .editing-image .ke-img-btn-toolbar button:first-child {
-  border-top-left-radius: 0.3em;
-  border-bottom-left-radius: 0.3em;
-}
-.ke-editor .editing-image .ke-img-btn-toolbar button:last-child {
-  border-top-right-radius: 0.3em;
-  border-bottom-right-radius: 0.3em;
 }
 .ke-toolbar {
   border: 1px solid #cccccc;
@@ -123,11 +104,12 @@
   border-bottom: 1px solid #cccccc;
 }
 .ke-prompt .ke-prompt-header h1 {
-  font-size: 1em;
-  font-weight: normal;
+  font-size: 1em !important;
+  font-weight: normal !important;
   margin: 0;
   padding: 0;
   color: black;
+  text-align: left;
 }
 .ke-prompt .ke-prompt-body {
   padding: 0 1em;
