--- a/website_assets/website.css
+++ b/website_assets/website.css
@@ -83,11 +83,18 @@ h2 {
   color: #77A2AD;
 }
 code {
-  display: inline-block;
-  padding: 0.3em 0.4em 0.2em;
   border-radius: 0.3em;
   background: #f6f9fa;
   border: dashed 1px #77a2ad;
+  display: inline-block;
+  padding: 0.3em 0.4em 0.2em;
+}
+pre {
+  border-radius: 0.3em;
+  background: #f6f9fa;
+  border: dashed 1px #77a2ad;
+  display: block;
+  padding: 1em;
 }
 textarea {
   font-size: 16px;
