--- a/css/themes/dark-koala.less
+++ b/css/themes/dark-koala.less
@@ -48,6 +48,9 @@
         border-color: @accent-color;
       }
     }
+    .ke-drop-area {
+      border-color: @accent-color;
+    }
     .ke-prompt-footer {
       button {
         color: @accent-contrast-color;
