--- a/css/themes/dark-koala.css
+++ b/css/themes/dark-koala.css
@@ -1,3 +1,7 @@
+/*
+ * Koala Editor theme file
+ * Just edit the variables below to generate a theme.
+ */
 .ke-box.dark-koala .ke-editor {
   border-color: #333333;
 }
