--- a/css/themes/dark-koala.less
+++ b/css/themes/dark-koala.less
@@ -1,3 +1,10 @@
+/*
+ * Koala Editor theme file
+ * Just edit the variables below to generate a theme.
+ */
+
+@theme-name: dark-koala;
+
 @accent-color: #77A2AD;
 @accent-contrast-color: white;
 @border-color: #333;
@@ -5,7 +12,7 @@
 @toolbar-button-color: white;
 @toolbar-button-color-hover: #333;
 
-.ke-box.dark-koala {
+.ke-box.@{theme-name} {
 
   .ke-editor {
     border-color: @border-color;
