--- a/website_assets/website.less
+++ b/website_assets/website.less
@@ -1,4 +1,4 @@
-@color: #77A2AD;
+@color: #78A3AD;
 
 .font() {
   font-size: 16px;
@@ -91,7 +91,7 @@ section h1 {
 
 h2 {
   font-size: 1.3em;
-  color: #77A2AD;
+  color: @color;
 }
 
 .code(){
