--- a/css/koalaeditor.less
+++ b/css/koalaeditor.less
@@ -240,6 +240,9 @@
 }
 
 .ke-code {
+  border-radius:0;
+  text-align: left;
+  font-size: 14px;
   border: 1px solid @border-color;
   margin: 0;
   padding: 10px;
